--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -20,11 +20,11 @@
   - f.field :product, :without_stocks
 =formalize(:id=>:stocks) do |f|
   - f.title :stocks
-  -# if @stock_locations.size > 1
-    =#select(:stock, :location, @stock_locations.collect{|x| [x.name, x.id]})
-  - f.field :product, :quantity_min
-  - f.field :product, :critic_quantity_min
-  - f.field :product, :quantity_max
+  - f.field :products_stock, :quantity_min
+  - f.field :products_stock, :critic_quantity_min
+  - f.field :products_stock, :quantity_max
+  - if @stock_locations.size > 1
+    - f.field :products_stock, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]}
 =formalize do |f|
   - f.title :description
   - f.field :product, :catalog_name
@@ -36,6 +36,8 @@
 =javascript_tag("function display_service_coeff(element) { var sc=$('service_coeff'); if (element.checked) { sc.style.display=''; } else { sc.style.display='none'; }; return false; }\ndisplay_service_coeff($('product_nature_service'));")
 =observe_field("product_name", :frequency =>0.25, :function => "var cn = $('product_catalog_name'); cn.value = value;")
 =observe_field("product_nature_service", :frequency =>0.25, :function => "display_service_coeff(element);" )
+-if request.url.to_s.include? "update"
+  =observe_field("products_stock_location_id", :url=>{:action=>:change_quantities}, :frequency=>0.25, :with=>"products_stock_location_id")
 
 :javascript
   function stocks(){
