--- a/app/views/management/stocks.html.haml
+++ b/app/views/management/stocks.html.haml
@@ -20,8 +20,8 @@
         %td= link_to @product_stock.product.name, :action=>:products_display, :id=>@product_stock.product_id
         %td= @product_stock.product.unit.label
         %td= @product_stock.product.weight
-        %td= @product_stock.product.quantity_max
-        %td= @product_stock.product.quantity_min
-        %td= @product_stock.product.critic_quantity_min
+        %td= @product_stock.quantity_max
+        %td= @product_stock.quantity_min
+        %td= @product_stock.critic_quantity_min
         %td= @product_stock.current_virtual_quantity
         %td= @product_stock.current_real_quantity
