--- a/app/views/management/index.html.haml
+++ b/app/views/management/index.html.haml
@@ -1,10 +1,10 @@
 .aclist.indicator
   %h2= tc('indicator')
   %ul
-    %li= link_to tc('nb_sales', :count=>@deliveries.size), :controller=>:management, :action=>:undelivered_sales
-    %li= link_to tc('nb_purchases', :count=>@purchases.size), :controller=>:management, :action=>:unreceived_purchases
+    %li= link_to tc('nb_sales', :count=>@deliveries.size), :action=>:undelivered_sales
+    %li= link_to tc('nb_purchases', :count=>@purchases.size), :action=>:unreceived_purchases
   - if @product_stocks.size > 0
     %h2= tc('low_stocks')
-    .stocks
+    .stocks 
       =render :partial=>"stocks"
 =menu_index
