--- a/app/views/accountancy/_entries.html.haml
+++ b/app/views/accountancy/_entries.html.haml
@@ -1,4 +1,5 @@
-- form_remote_tag(url_for(:controller => "accountancy12", :action => "entries")) do 
+=salut
+- form_remote_tag(url_for(:controller => "accountancy", :action => "entries")) do 
   %table.dyta
     %tr
       %th=tc :record_number
