--- a/app/views/accountancy/_entries.html.haml
+++ b/app/views/accountancy/_entries.html.haml
@@ -14,7 +14,7 @@
       %td=text_field :record, :created_on, {:size=>10}
       %td=text_field :record, :printed_on, {:size=>10} 
       %td=text_field :entry, :name, {:size=>16}
-      %td=text_field :account, :number, {:size=>8} 
+      %td=dyli_tag :entry, :account, :dyli=>:account_search, :resize=>false 
       %td=text_field :entry, :currency_debit, {:size=>7}
       %td=text_field :entry, :currency_credit, {:size=>7}
       %td{:colspan=>2}
@@ -46,5 +46,4 @@
             %td{:align=>"right"}=number_to_currency(entry.currency_credit, :delimiter=>"", :precision => 2, :unit=>"")
             %td.act=link_to tc(:update), :action => "entries_update", :id => entry.id
             %td.act=link_to_remote tc(:delete), :url =>{:action => "entries", :id => entry.id}, :method=>:delete, :confirm=> tc(:confirm) 
-=observe_field "account_number", :frequency => 0.25, :function =>"if ( $('account_number').value.indexOf('*', 0) > -1 ) { "+remote_function(:update => 'account', :url => { :action => 'accounts_find'}, :with => "'account=' + escape(value)", :loading=>"onLoading();", :loaded=>"onLoaded();")+";}"
 #test
