--- a/app/views/backend/equipments/show.html.haml
+++ b/app/views/backend/equipments/show.html.haml
@@ -31,5 +31,7 @@
     - if resource.linkage_points.any?
       - b.cell(:carried_linkages) do
         = list(:carried_linkages)
-    - b.cell(:carrier_linkages) do
-      = list(:carrier_linkages)
+    - b.cell(tl(:x_indicators, :count => resource.indicator_data.count)) do
+      = toolbar do |t|
+        - t.new(:params =>{:controller => :product_indicator_data, :product_id => resource.id})
+      = list(:indicators)
