--- a/app/themes/tekyla/stylesheets/mixins.css.scss
+++ b/app/themes/tekyla/stylesheets/mixins.css.scss
@@ -1,5 +1,10 @@
-@import "compass/css3";
-@import "compass/utilities";
+@import "compass/css3/border-radius";
+@import "compass/css3/box-shadow";
+@import "compass/css3/box-sizing";
+@import "compass/css3/inline-block";
+@import "compass/css3/transition";
+@import "compass/typography/text/ellipsis";
+@import "compass/utilities/general/clearfix";
 
 @function background-hover($background-color) {
   @return mix($background-color, opacify($hover-mask, 1), percentage($hover-transparency));
