--- a/app/themes/tekyla/stylesheets/mixins.css.scss
+++ b/app/themes/tekyla/stylesheets/mixins.css.scss
@@ -5,6 +5,7 @@
 @import "compass/css3/transition";
 @import "compass/typography/text/ellipsis";
 @import "compass/utilities/general/clearfix";
+@import "bootstrap/mixins";
 
 @function background-hover($background-color) {
   @return mix($background-color, opacify($hover-mask, 1), percentage($hover-transparency));
